cfn2.yml
AWSTemplateFormatVersion: 2010-09-09

Description: |
  This CloudFormation Template was written for running Kittens Carousel Static Website on EC2. 
  Kittens Carousel Static Website will be deployed on Amazon Linux 2023 EC2 Instance with custom 
  security group which allows http connections on port 80 and ssh port 22 from anywhere. 
  Kittens Carousel Static Website is downloaded from my Public Github repository, then deployed on Apache Web Server.

Resources:

  mySecGrp:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH (22) and HTTP (80) access
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags:
          - Key: Name
            Value: emre-CFN-SecGroup

  myWebServer:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      ImageId: ami-08b5b3a93ed654d19
      KeyName: awskey
      SecurityGroupIds:
        - !Ref mySecGrp
      Tags:
          - Key: Name
            Value: emre-WebServer
      UserData: !Base64 |
        #! /bin/bash
        dnf update -y
        dnf install httpd -y
        FOLDER="https://raw.githubusercontent.com/emrebiyik/kittens-carousel-ec2/refs/heads/main/static-web"
        cd /var/www/html
        wget ${FOLDER}/index.html
        wget ${FOLDER}/ondia.png
        wget ${FOLDER}/cat0.jpg
        wget ${FOLDER}/cat1.jpg
        wget ${FOLDER}/cat2.jpg
        systemctl start httpd
        systemctl enable httpd

Outputs:
  WebsiteURL:
    Value: !Sub
      - http://${PublicAddress}
      - PublicAddress: !GetAtt myWebServer.PublicDnsName
    Description: Kittens Carousel Application URL
